--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ nav a.active {
     <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (May 2024 - Present)</h3>
     <p>Designed, ran, and monitored material properties testing based on customers' needs. Assisted in pioneering the study of crack propagation at Kratos, which entailed designing testing fixtures and creating a calculator for interpreting results. Interacted with representatives from top defense industry companies to provide an exceptional product in a timely manner. </p>
     <h3>Residential Advisor: University of Alabama Housing & Residential Communities</h3>
-    <p>I serve as residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 6 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
+    <p>I serve as a residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 6 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
     <h3>Aerodynamics Assistant Lead Engineer: Formula SAE (Crimson Racing)</h3>
     I currently serve as the Aerodynamics Assistant Lead for my school's FSAE chapter, where I am also the Senior Engineer for the Rear Wing of our CR25 car, which is highlighted in the projects section. Previously, I held the position of Side Aero Senior Engineer for our CR22B car.
 
@@ -266,16 +266,16 @@ nav a.active {
     </div>
     <div class="project-item">
         <h3>CR22 Side Aero Design</h3>
-        <p>Did the first iterations of side aero for Crimson Racing. Through this I got introduced to CFD and SolidWorks and how to use them for interative design. This design laid the ground work for later side aero engineers </p>
+        <p>Did the first iterations of side aero for Crimson Racing. Through this, I got introduced to CFD and SolidWorks and how to use them for iterative design. This design laid the ground work for later side aero engineers </p>
     </div>
     <div class="project-item">
         <h3>Flag Deposite Box</h3>
-        <p>Planned, got materials donated, and managed the troop while designating task for my Eagle Scout project. I also had to get the placement of the box approved by the church committee. This flag box is still in use today and has about 30 flags depostied a month that are properly retired. 
+        <p>Planned, got materials donated, and managed the troop while designating tasks for my Eagle Scout project. I also had to get the placement of the box approved by the church committee. This flag box is still in use today and has about 30 flags depostied a month that are properly retired. 
         </p>
         <img src="FB Front.JPEG" alt="front" width="300" height="400" title="FB">
-        <p>Front of flag deposite box</p>
+        <p>Front of flag deposit box</p>
         <img src="FB Back.JPEG" alt="back" width="300" height="400" title="FB">
-        <p>Back of flag deposite box</p>
+        <p>Back of flag deposit box</p>
 
     </div>
 </section>
