--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ nav a.active {
         <p>Did the first iterations of side aero for Crimson Racing. Through this, I got introduced to CFD and SolidWorks and how to use them for iterative design. This design laid the ground work for later side aero engineers </p>
     </div>
     <div class="project-item">
-        <h3>Flag Deposite Box</h3>
+        <h3>Flag Deposit Box</h3>
         <p>Planned, got materials donated, and managed the troop while designating tasks for my Eagle Scout project. I also had to get the placement of the box approved by the church committee. This flag box is still in use today and has about 30 flags depostied a month that are properly retired. 
         </p>
         <img src="FB Front.JPEG" alt="front" width="300" height="400" title="FB">
