--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         </nav>
     </head>
 
-    <header>
-    </header>
+    <!-- Command Prompt Box -->
+    <div id="commandPrompt">
+        <p id="output"></p>
+    </div>
 
+    <!--- Background Image Header -->
+    <header></header>
 
-
-<!-- Body Content -->
+    <!-- Body Content -->
     <body>
         <section id="about" class="intro">
             <h2>About Me</h2>
@@ -115,7 +118,6 @@
                 </p>
             </div>
         </section>
-
 
         <!-- Script for Welcome box -->
         <script>
