--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- script for welcome box -->
         <script>
-            const texts = ["Hello", "My name is Lake Larson", "Welcome to my website :)"];
+            const texts = ["Hello", "My name is Lake Larson", "I make race cars", "Welcome to my website :)"];
             let currentTextIndex = 0;
             let currentCharIndex = 0;
             let deleting = false;
