--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
             <div class="project-item">
                 <h3>CR22 Side Aero Design</h3>
                 <p>Did the first iterations of side aero for Crimson Racing. Through this, I got introduced to CFD and SolidWorks and how to use them for iterative design. This design laid the ground work for later side aero engineers </p>
-                <img src="img/BW glider1.png" alt="glider" width="500" height="300" title="CFD">
-                <p>Overhead image of glider</p>
-                <img src="img/BW glide2.png" alt="tail" width="500" height="300" title="CFD">
-                <p>Wing of glider.</p>
-                <img src="img/BW glider3.png" alt="wing" width="500" height="300" title="CFD">
-                <p>Tail of glider.</p>
             </div>
              <div class="project-item">
                 <h3>Glider Project</h3>
-                <p> Made a model glider based on given parameters. The glider carried 24 quarters 40.3 feet.</p>
+                <p> Freshman year I made a model glider based on set parameters in my intro to Engineering class. The glider successfully carried 24 quarters 40.3 feet. This project was my first introduction to a real engineering problem and was when I knew this is what I wanted to do with my life. The wing construction is something worth highlighting, it was constructed using 3d printed ribs that were designed by importing an airfoil from Airfoil Tools into Solidworks and a slot was added for the spar. They were then 3d printed, mounted to a balsa wood spar, and covered in a paper skin to save weight.  </p>
+                <img src="img/BW glider1.JPEG" alt="glider" width="500" height="300" title="CFD">
+                <p>Overhead image of glider</p>
+                <img src="img/BW glide2.JPEG" alt="tail" width="500" height="300" title="CFD">
+                <p>Wing of glider.</p>
+                <img src="img/BW glider3.JPEG" alt="wing" width="500" height="300" title="CFD">
+                <p>Tail of glider.</p>
             </div>
             <div class="project-item">
                 <h3>Flag Deposit Box</h3>
