--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <p>Tail of glider.</p>
             </div>
             <div class="project-item">
+                <h3>Python Dive Calculator</h3>
+                <p> Made a dive calculator for my final Project in my intro to Python coding class.</p>
+                
+            </div>
+            <div class="project-item">
                 <h3>Flag Deposit Box</h3>
                 <p>Planned, got materials donated, and managed the troop while designating tasks for my Eagle Scout project. I also had to get the placement of the box approved by the church committee. This flag box is still in use today and has about 30 flags depostied a month that are properly retired. 
                 </p>
