--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </div>
             <div class="project-item">
                 <h3>Python Dive Calculator</h3>
+                <a href="https://github.com/lakelarson/Dive_calc.git">Dive Claculator</a>
                 <p> Made a dive calculator for my final Project in my intro to Python coding class.</p>
                 
             </div>
@@ -103,10 +104,11 @@
                 <li>3D printing</li>
                 <li>Composites Manufacturing</li>
                 <li>Additive Manufacturing</li>
-                <li>Paraview</li>
+                <li>Creo</li>
                 <li>Excel</li>
                 <li>Paraview</li>
                 <li>Iterative Design</li>
+                <li>Catia</li>
             </ul>
         </section>
 
