--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
              <div class="project-item">
                 <h3>Glider Project</h3>
                 <p> Freshman year I made a model glider based on set parameters in my intro to Engineering class. The glider successfully carried 24 quarters 40.3 feet. This project was my first introduction to a real engineering problem and was when I knew this is what I wanted to do with my life. The wing construction is something worth highlighting, it was constructed using 3d printed ribs that were designed by importing an airfoil from Airfoil Tools into Solidworks and a slot was added for the spar. They were then 3d printed, mounted to a balsa wood spar, and covered in a paper skin to save weight.  </p>
-                <img src="img/glider1.JPEG" alt="glider" width="500" height="300" title="CFD">
+                <img src="img/glider1.JPG" alt="glider" width="500" height="300" title="CFD">
                 <p>Overhead image of glider</p>
-                <img src="img/glide2.JPEG" alt="tail" width="500" height="300" title="CFD">
+                <img src="img/glider2.JPG" alt="tail" width="500" height="300" title="CFD">
                 <p>Wing of glider.</p>
-                <img src="img/glider3.JPEG" alt="wing" width="500" height="300" title="CFD">
+                <img src="img/glider3.JPG" alt="wing" width="500" height="300" title="CFD">
                 <p>Tail of glider.</p>
             </div>
             <div class="project-item">
