--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="project-item">
                 <h3>Python Dive Calculator</h3>
-                <a href="https://github.com/lakelarson/Dive_calc.git">Dive Claculator</a>
+                <a href="https://github.com/lakelarson/Dive_calc.git" target="_blank">Dive Calculator</a>
                 <p> Made a dive calculator for my final Project in my intro to Python coding class.</p>
                 
             </div>
