--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
              <div class="project-item">
                 <h3>Glider Project</h3>
                 <p> Freshman year I made a model glider based on set parameters in my intro to Engineering class. The glider successfully carried 24 quarters 40.3 feet. This project was my first introduction to a real engineering problem and was when I knew this is what I wanted to do with my life. The wing construction is something worth highlighting, it was constructed using 3d printed ribs that were designed by importing an airfoil from Airfoil Tools into Solidworks and a slot was added for the spar. They were then 3d printed, mounted to a balsa wood spar, and covered in a paper skin to save weight.  </p>
-                <img src="img/glider1.JPG" alt="Glider flying simulation" style="max-width: auto; height: auto;" title="CFD">
+                <img src="img/glider1.JPG" alt="Glider flying" width="300" height="400" title="glider">
                 <p>Overhead image of glider</p>
-                <img src="img/glider1.JPG" alt="Glider flying simulation" style="max-width: auto; height: auto;" title="CFD">
+                <img src="img/glider1.JPG" alt="Glider flying" width="300" height="400" title="glider">
                 <p>Wing of glider.</p>
-                <img src="img/glider1.JPG" alt="Glider flying simulation" style="max-width: auto; height: auto;" title="CFD">
+                <img src="img/glider1.JPG" alt="Glider flying" width="300" height="400" title="glider">
                 <p>Tail of glider.</p>
             </div>
             <div class="project-item">
                 <h3>Python Dive Calculator</h3>
-                <a href="https://github.com/lakelarson/Dive_calc.git" target="_blank">Dive Calculator</a>
                 <p> Made a dive calculator for my final Project in my intro to Python coding class.</p>
-                
+                <a href="https://github.com/lakelarson/Dive_calc.git" target="_blank">Dive Calculator</a>
+               
             </div>
             <div class="project-item">
                 <h3>Flag Deposit Box</h3>
