--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <section id="education" class="education">
             <h2>Education</h2>
             <p><strong>Bachelor of Science in Aerospace Engineering</strong> - University of Alabama, May 2027</p>
+            <img src="img/Bamalogo.png" alt="vortex" width="600" height="100" title="CFD">
         </section>
 
         <section id="skills" class="skills">
@@ -95,7 +96,8 @@
             <ul>
                 <li>CFD (Ansys)</li>
                 <li>FEA (SolidWorks and Abaqus)</li>
-                <li>CAD (SolidWorks)</li>
+                <li>CAD</li>
+                <li>SolidWorks</li>
                 <li>Project Management</li>
                 <li>Python</li>
                 <li>MATLAB</li>
@@ -115,7 +117,7 @@
         <section id="contact" class="contact">
             <h2>Contact me</h2>
             <p>I look foward to the opportunity to collaborate with you! </p>
-            <div style="font-family: Arial, sans-serif; line-height: 1.6; margin-top: 20px;">
+            <div style="font-family: Arial, sans-serif; line-height: 1.6; margin-top: 20;">
                 <p>
                     <strong>Email:</strong> <a href="mailto:ldlarson@crimson.ua.edu">ldlarson@crimson.ua.edu</a><br>
                     <strong>Phone:</strong> <a href="tel:+18654419627">(865)-441-9627</a><br>
