--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
         <nav>
             <a href="#about">About</a>
             <a href="#experience">Experience</a>
-            <a href="#projects">Projects</a>
+            <li class="dropdown">
+                    <a href="#projects">Projects</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#cr25">CR25 Rear Wing Design</a></li>
+                        <li><a href="#cr22">CR22 Side Aero Design</a></li>
+                        <li><a href="#glider">Glider Project</a></li>
+                        <li><a href="#dive-calc">Dive Calculator</a></li>
+                        <li><a href="#flag-box">Flag Deposit Box</a></li>
+                    </ul>
+            </li>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
@@ -33,14 +42,15 @@
             <h2>Professional Experience</h2>
             <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (May 2024 - Present)</h3>
             <p>Designed, ran, and monitored material properties testing based on customers' needs. Assisted in pioneering the study of crack propagation at Kratos, which entailed designing testing fixtures and creating a calculator for interpreting results. Interacted with representatives from top defense industry companies to provide an exceptional product in a timely manner. </p>
-            <h3>Residential Advisor: University of Alabama Housing & Residential Communities</h3>
-            <p>I serve as a residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 6 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
             <h3>Aerodynamics Assistant Lead Engineer: Formula SAE (Crimson Racing)</h3>
             I currently serve as the Aerodynamics Assistant Lead for my school's FSAE chapter, where I am also the Senior Engineer for the Rear Wing of our CR25 car, which is highlighted in the projects section. Previously, I held the position of Side Aero Senior Engineer for our CR22B car.
 
             Through my experiences in FSAE, I have developed valuable communication skills while collaborating with a team of engineers. I have learned the importance of compromise to achieve our design goals, ensuring that all components work seamlessly together. Additionally, I have been involved in the manufacture of over 20 carbon fiber parts, overseeing the process from mold design to the final product.
          
             One of the most rewarding aspects of my role is the opportunity to help mentor and support the next generation of engineers.
+            <h3>Residential Advisor: University of Alabama Housing & Residential Communities</h3>
+            <p>I serve as a residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 6 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
+            
         </section>
         <section id="projects" class="projects">
             <h2>Key Projects</h2>
