--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             typeText();
                         }, pauseBetweenTexts);
                     } else {
-                        document.getElementById('cursor').style.display = 'none'; // Hide cursor after last line
+                        document.getElementById('cursor').style.display = 'none';
                     }
                 } else if (deleting && currentCharIndex > 0) {
                     currentCharIndex--;
