--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="project-item">
                 <h3>Python Dive Calculator</h3>
-                <p> Made a dive calculator for my final Project in my intro to Python coding class.</p>
+                <p> Made a scuba dive calculator for my final Project in my intro to Python coding class. It takes various inputs such as air tank pressure and desired depth and calculates how if and how long you can explore at said depth while still having enought air to surface safely.</p>
                 <a href="https://github.com/lakelarson/Dive_calc.git" target="_blank">Dive Calculator</a>
                
             </div>
@@ -89,7 +89,7 @@
         <section id="education" class="education">
             <h2>Education</h2>
             <p><strong>Bachelor of Science in Aerospace Engineering</strong> - University of Alabama, May 2027</p>
-            <img src="img/Bamalogo.png" alt="vortex" width="600" height="152" title="CFD">
+            <img src="img/Bamalogo.png" alt="vortex" width="600" height="152" title="bamalogo">
         </section>
 
         <section id="skills" class="skills">
