--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="experience" class="experience">
             <h2>Professional Experience</h2>
             <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (May 2024 - Present)</h3>
-            <p>Designed, ran, and monitored material properties testing based on customers' needs. Assisted in pioneering the study of crack propagation at Kratos, which entailed designing testing fixtures and creating a calculator for interpreting results. Interacted with representatives from top defense industry companies to provide an exceptional product in a timely manner. </p>
+            <p>I Design, conduct, monitor, and troubleshoot hundreds of material property tests to meet customers’ data requirements, ensuring precise results that meet high industry standards and align with client expectations. During my first term, my large project was collaborating on the pioneering of crack propagation studies at Kratos by designing specialized test fixtures and developing a data interpreter. This provided engineers with accurate results and tools to improve future tests. With all of these projects I had to draft technical drawings that accommodated the customer’s desired test samples within the provided materials, enabling efficient fabrication by the internal machine shop, ensuring on-time and project completion  </p>
             <h3>Aerodynamics Assistant Lead Engineer: Formula SAE (Crimson Racing)</h3>
             I currently serve as the Aerodynamics Assistant Lead for my school's FSAE chapter, where I am also the Senior Engineer for the Rear Wing of our CR25 car, which is highlighted in the projects section. Previously, I held the position of Side Aero Senior Engineer for our CR22B car.
 
@@ -63,11 +63,11 @@
                 <h3>Glider Project</h3>
                 <p> Freshman year I made a model glider based on set parameters in my intro to Engineering class. The glider successfully carried 24 quarters 40.3 feet. This project was my first introduction to a real engineering problem and was when I knew this is what I wanted to do with my life. The wing construction is something worth highlighting, it was constructed using 3d printed ribs that were designed by importing an airfoil from Airfoil Tools into Solidworks and a slot was added for the spar. They were then 3d printed, mounted to a balsa wood spar, and covered in a paper skin to save weight.  </p>
                 <img src="img/glider1.JPG" alt="Glider flying" width="300" height="400" title="glider">
-                <p>Overhead image of glider</p>
-                <img src="img/glider2.JPG" alt="Glider flying" width="300" height="400" title="glider">
-                <p>Wing of glider.</p>
+                <p>Overhead image of the glider</p>
                 <img src="img/glider3.JPG" alt="Glider flying" width="300" height="400" title="glider">
-                <p>Tail of glider.</p>
+                <p>Wing of the glider.</p>
+                <img src="img/glider2.JPG" alt="Glider flying" width="300" height="400" title="glider">
+                <p>Tail of the glider.</p>
             </div>
             <div class="project-item">
                 <h3>Python Dive Calculator</h3>
