--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section id="about" class="intro">
             <h2>About Me</h2>
-            <p>My name is Lake Larson, and I am currently a Junior majoring in Aerospace Engineering at The University of Alabama, Roll Tide! I am actively seeking an internship for the summer of 2025. My passions lie in materials science and computer simulations (CFD), and I have hands-on experience in both areas, as highlighted below. I am an active member of my school's Formula SAE chapter, where I spend most of my free time designing and manufacturing the next year's car. Please feel free to explore my website, and don't hesitate to reach out if you have any questions!</p>
+            <p> I am Lake Larson, an Eagle Scout and Junior in Aerospace Engineering at The University of Alabama, Roll Tide! I am actively seeking an internship for the summer of 2025. My passions lie in materials science and computer simulations (CFD), and I have hands-on experience in both areas, as highlighted below. I am an active member of my school's Formula SAE chapter, where I spend most of my free time designing and manufacturing the next year's car. Please feel free to explore my website, and don't hesitate to reach out if you have any questions!</p>
         </section>
 
         <section id="experience" class="experience">
