--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
         <section id="about" class="intro">
             <h2>About Me</h2>
-            <p> I am Lake Larson, an Eagle Scout and Junior in Aerospace Engineering at The University of Alabama, Roll Tide! I am actively seeking an internship for the summer of 2025. My passions lie in materials science and computer simulations (CFD), and I have hands-on experience in both areas, as highlighted below. I am an active member of my school's Formula SAE chapter, where I spend most of my free time designing and manufacturing the next year's car. Please feel free to explore my website, and don't hesitate to reach out if you have any questions!</p>
+            <p> I am Lake Larson, an Eagle Scout and Senoir in Aerospace Engineering at The University of Alabama, Roll Tide! I am actively seeking an internship for the summer of 2025. My passions lie in materials science and computer simulations (CFD), and I have hands-on experience in both areas, as highlighted below. I am an active member of my school's Formula SAE chapter, where I spend most of my free time designing and manufacturing the next year's car. Please feel free to explore my website, and don't hesitate to reach out if you have any questions!</p>
         </section>
 
         <section id="experience" class="experience">
             <h2>Professional Experience</h2>
             <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (May 2024 - Present)</h3>
-            <p>I Design, conduct, monitor, and troubleshoot hundreds of material property tests to meet customers’ data requirements, ensuring precise results that meet high industry standards and align with client expectations. During my first term, my large project was collaborating on the pioneering of crack propagation studies at Kratos by designing specialized test fixtures and developing a data interpreter. This provided engineers with accurate results and tools to improve future tests. With all of these projects I had to draft technical drawings that accommodated the customer’s desired test samples within the provided materials, enabling efficient fabrication by the internal machine shop, ensuring on-time and project completion  </p>
+            <p>I Design, conduct, monitor, and troubleshoot hundreds of material property tests to meet customers’ data requirements, ensuring precise results that meet high industry standards and align with client expectations. During my first term, my large project was collaborating on the pioneering of crack propagation studies at Kratos by designing specialized test fixtures and developing a data interpreter. This provided engineers with accurate results and tools to improve future tests. With all of these projects I had to draft technical drawings that accommodated the customer’s desired test samples within the provided materials, enabling efficient fabrication by the internal machine shop, ensuring on-time and project completion.  </p>
             <h3>Aerodynamics Assistant Lead Engineer: Formula SAE (Crimson Racing)</h3>
             I currently serve as the Aerodynamics Assistant Lead for my school's FSAE chapter, where I am also the Senior Engineer for the Rear Wing of our CR25 car, which is highlighted in the projects section. Previously, I held the position of Side Aero Senior Engineer for our CR22B car.
 
@@ -40,7 +40,7 @@
          
             One of the most rewarding aspects of my role is the opportunity to help mentor and support the next generation of engineers.
             <h3>Residential Advisor: University of Alabama Housing & Residential Communities</h3>
-            <p>I serve as a residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 6 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
+            <p>I serve as a residential advisor to 40 freshmen this year and served 40 the year previous. I organized, planned, and ran 9 community-building events including an ice cream social, dodgeball tournament, and game nights. I also connected with residents and worked to build a sense of community that allowed them to adjust to college in a healthy manner.</p>
             
         </section>
         <section id="projects" class="projects">
