--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
-            <a href="files/Resume.pdf" class="active" target="_blank">Resume</a>
+            <a href="#"
+               class="active"
+               onclick="alert('Please contact me for a copy of my resume for professional inquiries.'); return false;">Resume</a>
         </nav>
     </head>
 
@@ -180,3 +182,4 @@
         </script>
     </body>
 </html>
+
