--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
-            <a href="#"
+            <a href="javascript:void(0)"
                class="active"
-               onclick="alert('Please contact me for a copy of my resume for professional inquiries.'); return false;">Resume</a>
+               onclick="alert('Please contact me for a copy of my resume for professional inquiries.');">
+                Resume
+                </a>
         </nav>
     </head>
 
@@ -182,4 +184,5 @@
         </script>
     </body>
 </html>
+
 
