--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Lake Larson</title>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#projects">Projects</a>
-            <a href="#education">Education</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
-            <a href="javascript:void(0)"
-               class="active"
-               onclick="alert('Please contact me for a copy of my resume for professional inquiries.');">
-                Resume
-                </a>
-        </nav>
-    </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Lake Larson</title>
+</head>
+
+<body>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#experience">Experience</a>
+    <a href="#projects">Projects</a>
+    <a href="#education">Education</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+
+    <a href="javascript:void(0)"
+       class="active"
+       onclick="alert('Please contact me for a copy of my resume for professional inquiries.');">
+      Resume
+    </a>
+  </nav>
+
 
     <!--- Header Image -->
     <header></header>
@@ -184,5 +190,6 @@
         </script>
     </body>
 </html>
+
 
 
