--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <div id="resumeNotice" style="display:none; padding:10px; background:#f0f0f0; border:1px solid #ccc; margin:10px 0;">
+    Please contact me for a copy of my resume for professional inquiries. 
+    <a href="mailto:ldlarson@crimson.ua.edu">Email Me</a>
+  </div>
 
   <nav>
     <a href="#about">About</a>
@@ -195,6 +199,7 @@
         </script>
     </body>
 </html>
+
 
 
 
