--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
 
     <a href="javascript:void(0)"
        class="active"
-       onclick="
-         if (confirm('Please contact me for a copy of my resume.\nClick OK to email me.')) {
-           window.location.href='mailto:ldlarson@crimson.ua.edu';
-         }
-       ">
+       onclick="document.getElementById('resumeNotice').style.display='block';">
       Resume
     </a>
+
 
   </nav>
 
@@ -199,6 +196,7 @@
         </script>
     </body>
 </html>
+
 
 
 
