--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <!-- script for welcome box -->
         <script>
-            const texts = ["Hello", "My name is Lake Larson", "I make race cars", "Welcome to my website :)"];
+            const texts = ["Hello", "My name is Lake Larson", "I make performance tangible", "Welcome to my website :)"];
             let currentTextIndex = 0;
             let currentCharIndex = 0;
             let deleting = false;
@@ -196,6 +196,7 @@
         </script>
     </body>
 </html>
+
 
 
 
