--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
         <section id="experience" class="experience">
             <h2>Professional Experience</h2>
-            <h3>Flight Test Structures and Dynamics Intern: Lockheed Martin RMS (Sikorsky)</h3>
-            <p>Currently an intern for Sikorsky's flight test facility in Jupiter, FL, where I assist in processing and analyzing flight test data to extract key performance metrics. </p>
+            <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (August 2025 - December 2025)</h3>
+            <p>During my third term at Kratos, I designed self-aligning test hardware and standardized procedures, eliminating manual alignment, improving repeatability, and reducing cycle time and costs. I also led a first-of-its-kind test series, generating actionable data that informed design decisions and optimized future testing methods. To ensure smooth execution, I built and managed a three-month project schedule spanning testing, analysis, and reporting, consistently meeting cost and timeline targets.</p>
+            <h3>Flight Test Structures and Dynamics Intern: Lockheed Martin RMS [Sikorsky] (May 2025 - August 2025)</h3>
+            <p>During my summer internship at Sikorsky, I processed and analyzed flight test data using batch scripts to filter results and generate visual graphs and charts that supported design decisions. I conducted Resonance Avoidance Program (RAP) tests on aircraft components to verify separation between component resonant frequencies and airframe natural modes. In support of test operations, I designed and kinematically modeled a test stand in CATIA V5 and developed real-time data displays in Curtiss-Wright IADS to enable rapid, informed decision-making during flight test activities.</p>
             <h3>Thermo Structural Systems Co-op: Kratos Defense & Security Solutions (May 2024 - May 2025)</h3>
             <p>I design, conduct, monitor, and troubleshoot hundreds of material property tests to meet customers’ data requirements, ensuring precise results that meet high industry standards and align with client expectations. During my first term, my large project was collaborating on the pioneering of crack propagation studies at Kratos by designing specialized test fixtures and developing a data interpreter. This provided engineers with accurate results and tools to improve future tests. With all of these projects, I had to draft technical drawings that accommodated the customer’s desired test samples within the provided materials, enabling efficient fabrication by the internal machine shop, ensuring on-time project completion. In my second term, I supported the standardization and organization of test samples and their associated hardware by surveying shop technicians and engineers to ensure optimal specimens were selected. Additionally, I played a key role in the development of an internal IRAD product that cut test setup time by 50%, overseeing the entire process—from communicating with technicians and drafting technical drawings to coordinating machining and managing final assembly. </p>
             <h3>Aerodynamics Assistant Lead Engineer: Formula SAE (Crimson Racing) (August 2022 - Present)</h3>
@@ -225,6 +227,7 @@
         </script>
     </body>
 </html>
+
 
 
 
