--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section id="about" class="intro">
             <h2>About Me</h2>
-            <p> I am Lake Larson, an Eagle Scout and Senior in Aerospace Engineering at The University of Alabama. Roll Tide! I am actively seeking an internship for the summer of 2025. My passions lie in materials science and computer simulations (CFD), and I have hands-on experience in both areas, as highlighted below. I am an active member of my school's Formula SAE chapter, where I spend most of my free time designing and manufacturing the next year's car. Please feel free to explore my website, and don't hesitate to reach out if you have any questions!</p>
+            <p> I’m Lake Larson, an Eagle Scout and senior in Aerospace Engineering at The University of Alabama. I’m driven by curiosity and a desire to understand how things actually work—from material behavior under load to the flow structures that emerge in complex aerodynamic systems. I enjoy problems that sit at the intersection of analysis, simulation, and hands-on execution, where ideas are tested, refined, and ultimately built. Whether I’m running simulations, designing hardware, or working in the shop, I’m most engaged when theory meets reality. Explore my work below, and don't hesitate to reach out if you have any questions!</p>
         </section>
 
         <section id="experience" class="experience">
